Fixed background issue where a minor drop-off of the background was visible

--- a/_sass/niedel.scss
+++ b/_sass/niedel.scss
@@ -128,7 +128,7 @@ hr.fade {
   z-index: -10;
   background-image: linear-gradient(to right, rgba(255, 224, 130, 0.8),rgba(255, 167, 101, 0.75), rgba(240, 109, 100, 0.70), rgba(204, 55, 114, 0.65), rgba(142, 24, 132, 0.6));
   transform: rotate(-1.5deg);
-  width: 110%;
+  width: 115%;
   min-height: 350px;
 }
 
